# sdl2task

./: README.md
sdl2/: CMakeLists.txt  main.cpp
